# tauri-app

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: alarms.rs  auto_clicker.rs  lib.rs
src/components/: Sidebar.tsx
src/components/Clock/: Alarms.tsx  Timer.tsx
src/hooks/: useDebounce.tsx
src/store/: useMainStore.ts
