[package]
name = "tauri-clock-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
enigo = "0.6.1"
inputbot = "0.6.0"
tokio = "1.49.0"
rodio = "0.21.1"
zip = "7.2.0"

